@@ -1,3 +1,7 @@
+2006-01-07  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Improved help reporting and added version reporting to library
+
 2006-01-06  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Change working directory to "/" even if running in the
